<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中文期刊助手</string>
    <string name="maintitlename">维普中文期刊助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="favor">文章收藏</string>
    <string name="nofavor">无文章收藏</string>
    <string name="follow">添加关注</string>
    <string name="download">下载管理</string>
    <string name="notification">引用通知</string>
    <string name="nonotification">无引用通知</string>
    <string name="nosearchresult">无搜索结果</string>
    <string name="feedback">用户反馈</string>
    <string name="user_info">用户信息</string>
    <string name="tag_article">文章</string>
    <string name="tag_magazine">期刊</string>
    <string name="tag_topic">主题</string>
    <string name="tag_author">作者</string>
    <string name="tag_orgnizetion">机构</string>
    <string name="tag_subject">学科</string>
    <string name="tag_region">地区</string>
    <string name="title_activity_down_load">DownLoadActivity</string>
    <string name="subscribe_my_category">关注</string>
    <string name="subscribe_add_category">添加关注</string>
    <string name="title_activity_display_follow">已关注</string>
    <string name="title_activity_channel">自定义排序</string>
    <string name="dialog_pick_confirm">确  定</string>
    <string name="dialog_pick_title">请选择期刊期数</string>
    <string name="title_cnno">国内统一刊号：</string>
    <string name="title_issn">国际标准刊号：</string>
    <string name="title_perio_chiefdept">主管单位：</string>
    <string name="title_perio_publisher">主办单位：</string>
    <string name="title_perio_chiefeditor">主　　编：</string>
    <string name="title_perio_type">期刊/开本：</string>
    <string name="title_perio_remark">简介：</string>
    <!-- 异常 -->
    <string name="generic_server_down">server no response</string>
    <string name="need_pwd">请输入用户名</string>
    <string name="need_username">请输入密码</string>
    <string name="hellotome">Please login first</string>
    <string name="no_internet">网络异常</string>
    <string name="generic_error">connection error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="requestaddress_error">请求错误</string>
    <string name="title_activity_detail_content">DetailContentActivity</string>

     <string name="action_addfavor">收藏</string>
     <string name="action_cancelfavor">取消收藏</string>
    <string name="action_share">分享</string>
    
    <string name="subscribe_manager_category_info_2">长按拖拽排序</string>
    
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_update_at">更新于 </string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_ticker_text">有新的回复</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_content_hint">我想说</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    
    <string name="btn_cancel">取消</string>
     <string name="btn_confirm">确定</string>
     <string name="login_title">用户登陆</string>
     <string name="login_username">用户名</string>
    <string name="login_password">秘密</string>
     <string name="btn_login">登陆</string>
</resources>
