<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/add_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            style="@style/left_drawer_item_text"
            android:layout_centerInParent="true"
            android:text="@string/follow" />
    </RelativeLayout>

    <ImageView style="@style/left_drawer_item_line" />

    <RelativeLayout
        android:id="@+id/favor_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            style="@style/left_drawer_item_text"
            android:layout_centerInParent="true"
            android:text="@string/favor" />
    </RelativeLayout>

    <ImageView style="@style/left_drawer_item_line" />

    <RelativeLayout
        android:id="@+id/down_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            style="@style/left_drawer_item_text"
            android:layout_centerInParent="true"
            android:text="@string/download" />
    </RelativeLayout>

    <ImageView style="@style/left_drawer_item_line" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/mes_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            android:id="@+id/tv_ref_update"
            style="@style/left_drawer_item_text"
            android:layout_width="100dp"
            android:layout_centerInParent="true"
            android:text="@string/notification" />
    </RelativeLayout>
    
      <ImageView style="@style/left_drawer_item_line" />
    
    <RelativeLayout
        android:id="@+id/user_info_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            android:id="@+id/tv_user_info"
            style="@style/left_drawer_item_text"
            android:layout_width="100dp"
            android:layout_centerInParent="true"
            android:text="@string/user_info" />
    </RelativeLayout>

    <ImageView style="@style/left_drawer_item_line" />
    
    <RelativeLayout
        android:id="@+id/feedback_btn"
        style="@style/left_drawer_item_layout" >

        <TextView
            android:id="@+id/tv_feedback"
            style="@style/left_drawer_item_text"
            android:layout_width="100dp"
            android:layout_centerInParent="true"
            android:text="@string/feedback" />
    </RelativeLayout>

    <ImageView style="@style/left_drawer_item_line" />

</LinearLayout>